force-app/main/default/objects/Activity_History__c/Activity_History__c.object-meta.xml
<CustomObject>
    <label>Activity History</label>
    <nameField>
        <displayFormat>AH-{00000}</displayFormat>
        <label>Activity History  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>