force-app/main/default/objects/Activity_History__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>