force-app/main/default/objects/Activity_History__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Activity Histories</relationshipLabel>
    <relationshipName>Activity_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>