force-app/main/default/objects/Activity_History__c/fields/Connected_Object_Lookup_Id__c.field-meta.xml
<CustomField>
    <fullName>Connected_Object_Lookup_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>