force-app/main/default/objects/Activity_History__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <formula>Connected_Object_Lookup_Id__c  &amp; &quot;_&quot; &amp; TEXT(Activity__c)</formula>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>