force-app/main/default/objects/Activity_History__c/fields/Unique_Key_with_ContactId__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key_with_ContactId__c</fullName>
    <formula>Connected_Object_Lookup_Id__c &amp; &quot;_&quot; &amp; TEXT(Activity__c)&amp; &quot;_&quot; &amp; CASESAFEID(Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key with ContactId</label>
    <type>Text</type>
</CustomField>