force-app/main/default/objects/Activity_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Channel_Category__c</columns>
    <columns>Channel__c</columns>
    <columns>Campaign__c</columns>
    <columns>Activity__c</columns>
    <columns>Activity_Score__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>